--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,20 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+          pip3 install --user --upgrade buildozer Cython==0.29.33
+
       - name: Build with Buildozer
-        uses: konradpabjan/buildozer-action@v1
-        with:
-          buildozer_version: master
-          command: buildozer -v android debug
+        run: |
+          export PATH=$PATH:~/.local/bin
+          yes | buildozer -v android debug
+        
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: my-game-apk
+          name: my-bike-game
           path: bin/*.apk
